--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,13 @@
+# dependencies
 /node_modules
-/package-lock.json
+
+# compiled output
+/dist
+
+# IDE - VSCode
+.vscode/*
+!.vscode/settings.json
+!.vscode/tasks.json
+!.vscode/launch.json
+!.vscode/extensions.json
+.history/*
