--- a/package.json
+++ b/package.json
@@ -25,7 +25,8 @@
     "express": "^4.17.1",
     "express-joi-validation": "^5.0.0",
     "joi": "^17.4.0",
-    "mongoose": "^5.12.3"
+    "pg": "^8.6.0",
+    "sequelize": "^6.6.2"
   },
   "devDependencies": {
     "@babel/core": "^7.13.10",
