--- a/package.json
+++ b/package.json
@@ -22,11 +22,13 @@
   },
   "homepage": "https://github.com/DmitrySkyrat/NodeJS_program#readme",
   "dependencies": {
+    "dotenv": "^10.0.0",
     "express": "^4.17.1",
     "express-joi-validation": "^5.0.0",
     "joi": "^17.4.0",
     "pg": "^8.6.0",
-    "sequelize": "^6.6.2"
+    "sequelize": "^6.6.2",
+    "uuid": "^8.3.2"
   },
   "devDependencies": {
     "@babel/core": "^7.13.10",
@@ -34,13 +36,16 @@
     "@babel/preset-env": "^7.13.12",
     "@babel/preset-typescript": "^7.13.0",
     "@babel/register": "^7.13.14",
+    "@types/dotenv": "^8.2.0",
     "@types/express": "^4.17.11",
     "@types/joi": "^17.2.3",
     "@types/node": "^14.14.37",
+    "@types/uuid": "^8.3.0",
     "@typescript-eslint/eslint-plugin": "^4.20.0",
     "@typescript-eslint/parser": "^4.20.0",
     "eslint": "^7.24.0",
     "nodemon": "^2.0.7",
+    "sequelize-cli": "^6.2.0",
     "ts-node": "^9.1.1",
     "typescript": "^4.2.3"
   }
