--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,7 +1,7 @@
 {
   "compilerOptions": {
     "target": "es2017",
-    "module": "CommonJS",
+    "module": "ES2020",
     "moduleResolution": "node",
     "sourceMap": true,
     "lib": [
