--- a/package.json
+++ b/package.json
@@ -28,7 +28,8 @@
     "joi": "^17.4.0",
     "pg": "^8.6.0",
     "sequelize": "^6.6.2",
-    "uuid": "^8.3.2"
+    "uuid": "^8.3.2",
+    "winston": "^3.3.3"
   },
   "devDependencies": {
     "@babel/core": "^7.13.10",
