--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "@types/cors": "^2.8.10",
     "@types/dotenv": "^8.2.0",
     "@types/express": "^4.17.11",
+    "@types/jest": "^26.0.23",
     "@types/joi": "^17.2.3",
     "@types/jsonwebtoken": "^8.5.1",
     "@types/node": "^14.14.37",
@@ -50,8 +51,11 @@
     "@typescript-eslint/eslint-plugin": "^4.20.0",
     "@typescript-eslint/parser": "^4.20.0",
     "eslint": "^7.24.0",
+    "jest": "^27.0.5",
     "nodemon": "^2.0.7",
     "sequelize-cli": "^6.2.0",
+    "sequelize-mock": "^0.10.2",
+    "ts-jest": "^27.0.3",
     "ts-node": "^9.1.1",
     "typescript": "^4.2.3"
   }
